fix navbar spacing

--- a/styles/main.css
+++ b/styles/main.css
@@ -7,14 +7,15 @@
 
 header {
   background-color: White;
-  text-align:center;
   font-family: 'La Belle Aurore', cursive;
   color: #d46e6e;
   padding-top:30px;
   display:inline-flex;
+  flex-direction:row;
   width:100%;
   justify-content:space-between;
-  position:relative;
+  border-bottom:solid 1px #d46e6e;
+  padding-bottom:20px;
 }
 
 
@@ -28,19 +29,17 @@ header {
 
 #nav-bar {
   background-color:white;
-  padding:15px;
-  display:inline-flex;
   align-self:flex-end;
 }
 
 #nav-links li {
   display:inline-flex;
   font-size:1.5rem;
-  margin: auto 50px;
   font-family:sans-serif;
   font-weight:200;
-  align-items:flex-end;
-
+  margin-left:10px;
+  margin-right:10px;
+  text-align:center;
 }
 
 #nav-links a {
